# love-imgui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  appveyor.yml  generate_bindings.sh  generate_imgui_bindings.pl  love-imgui-scm-1.rockspec  love-imgui.d.tl  love-imgui.d.tl.template  main.lua
.github/workflows/: main.yml
bindings2/: README.md  buffer.lua  etlua.lua  generate_bindings.lua  parse.lua  types.lua  util.lua  wrap_imgui_codegen.cpp  wrap_imgui_codegen.h
bindings2/lua/: api_details.md  autocomplete.json  generate.lua  generate_autocomplete.lua  types.lua  wrap_imgui_codegen.cpp
bindings2/wren/: api_details.md  generate.lua  imgui.wren  types.lua  wrap_imgui_codegen.cpp  wrap_imgui_codegen.h
cmake/: FindLove.cmake  FindLuaJIT.cmake  FindSDL2.cmake  wren.cmake
rockspecs/: love-imgui-0.7-1.rockspec
src/: imgui_impl.cpp  imgui_impl.h  imgui_iterator.h  imgui_iterator.inl  imgui_iterator_dock.h  imgui_stdlib.cpp  imgui_stdlib.h  main.cpp  register_imgui.inl  register_imgui_enums.inl  wrap_imgui.inl  wrap_imgui_codegen.cpp  wrap_imgui_codegen_wren.cpp  wrap_imgui_codegen_wren.h  wrap_imgui_impl.cpp
src/common/: config.h
src/libimgui/: imgui.cpp  imgui.h  imgui_dock.cpp  imgui_dock.h
src/libraries/imgui/: generate_imgui_bindings.pl  imgui_impl.cpp  imgui_impl.h  imgui_iterator.h  wrap_imgui_impl.cpp  wrap_imgui_impl.h
src/love-imgui/: README.md  imgui_impl.cpp  wrap_imgui_impl.cpp  wrap_imgui_impl.h
src/lua-bindings/: README.md  api_details.md  autocomplete.json  wrap_imgui_codegen.cpp
src/modules/love/: love.cpp
src/wren-bindings/: README.md  api_details.md  wrap_imgui_codegen.cpp
src/wren-example-imgui/: main.cpp
